# zentinel-agent-api-deprecation

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
examples/: default-config.yaml
src/: agent.rs  config.rs  headers.rs  lib.rs  main.rs  metrics.rs
