[package]
name = "zentinel-agent-api-deprecation"
version = "0.2.0"
edition = "2021"
authors = ["Raskell <hello@raskell.io>"]
description = "API deprecation management agent for Zentinel proxy - sunset headers, usage tracking, and migration support"
license = "Apache-2.0"
repository = "https://github.com/zentinelproxy/zentinel-agent-api-deprecation"
keywords = ["zentinel", "proxy", "agent", "api", "deprecation"]
categories = ["network-programming", "web-programming"]
readme = "README.md"

[dependencies]
# Zentinel SDK (v2 protocol support)
zentinel-agent-sdk = { path = "../zentinel-agent-rust-sdk" }
zentinel-agent-protocol = "0.5"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "fs"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

# Time handling (for sunset dates)
chrono = { version = "0.4", features = ["serde"] }

# Regex for path matching
regex = "1"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Metrics
prometheus = "0.13"

# Glob pattern matching for paths
globset = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[[bin]]
name = "zentinel-api-deprecation-agent"
path = "src/main.rs"

[lib]
name = "zentinel_agent_api_deprecation"
path = "src/lib.rs"
